[update]: elimine archivo prettier.config.js por .prettierrc

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,7 @@
   "tabWidth": 2,
   "printWidth": 90,
   "singleQuote": true,
-  "trailingComma": "es5"
+  "jsxSingleQuote": true,
+  "trailingComma": "es5",
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
