--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.8.1",
+    "@prisma/client": "5.8.1",
     "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.0.1",
-    "yup": "^1.3.3"
+    "react": "18",
+    "react-dom": "18",
+    "react-icons": "5.0.1",
+    "yup": "1.3.3"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "@types/node": "20",
+    "@types/react": "18",
+    "@types/react-dom": "18",
+    "autoprefixer": "10.0.1",
+    "eslint": "8",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "prettier": "^3.2.4",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^5.8.1",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "postcss": "8",
+    "prettier": "3.2.4",
+    "prettier-plugin-tailwindcss": "0.5.11",
+    "prisma": "5.8.1",
+    "tailwindcss": "3.3.0",
+    "typescript": "5"
   }
 }
