--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,10 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://user:password@localhost:5432/myDb"
+
+# can use https://generate-secret.vercel.app/32
+NEXTAUTH_SECRET=
+
+# 
+GITHUB_ID=
+GITHUB_SECRET=
