--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "5.8.1",
     "cookies-next": "^4.1.1",
     "next": "14.1.0",
+    "next-auth": "4.24.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "5.0.1",
