--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "1.2.1",
     "@prisma/client": "5.8.1",
     "cookies-next": "^4.1.1",
     "next": "14.1.0",
