--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "1.2.1",
     "@prisma/client": "5.8.1",
+    "bcryptjs": "2.4.3",
     "cookies-next": "^4.1.1",
     "next": "14.1.0",
     "next-auth": "4.24.5",
@@ -21,6 +22,7 @@
     "yup": "1.3.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "20.11.6",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
